<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity">

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guidelineV"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.5"/>

<TextView
    android:id="@+id/title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/title"
    android:textSize="12sp"
    android:textStyle="bold"
    android:textColor="@android:color/black"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="5dp"
    app:layout_constraintLeft_toRightOf="parent"
    app:layout_constraintRight_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/subTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/subTitle"
    android:textSize="12sp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:layout_constraintTop_toBottomOf="@id/title"
    app:layout_constraintLeft_toRightOf="parent"
    app:layout_constraintRight_toLeftOf="parent"/>

<ImageView
    android:id="@+id/mainImage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scaleType="fitCenter"
    android:adjustViewBounds="true"
    app:srcCompat="@drawable/commons"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:layout_constraintTop_toBottomOf="@id/subTitle"
    app:layout_constraintLeft_toRightOf="parent"
    app:layout_constraintRight_toLeftOf="parent"/>

<TextView
    android:id="@+id/addTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/addTitle"
    android:textSize="12sp"
    android:textColor="@color/textColor"
    android:textStyle="bold"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="10dp"
    app:layout_constraintTop_toBottomOf="@id/mainImage"
    app:layout_constraintLeft_toLeftOf="parent"/>

<ImageView
    android:id="@+id/addImage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:srcCompat="@drawable/location"
    android:scaleType="fitCenter"
    android:adjustViewBounds="true"
    android:maxHeight="30dp"
    android:maxWidth="30dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginRight="5dp"
    app:layout_constraintTop_toBottomOf="@id/addTitle"
    app:layout_constraintLeft_toLeftOf="parent"/>

<TextView
    android:id="@+id/address"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="4dp"
    android:text="@string/address"
    android:textColor="@color/textColor"
    android:textSize="12sp"
    android:layout_marginLeft="5dp"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toTopOf="@id/timeTitle"
    app:layout_constraintLeft_toRightOf="@id/addImage"
    app:layout_constraintTop_toBottomOf="@id/addTitle" />

<TextView
    android:id="@+id/timeTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/timeTitle"
    android:textSize="12sp"
    android:textColor="@color/textColor"
    android:textStyle="bold"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    app:layout_constraintTop_toBottomOf="@id/addImage"
    app:layout_constraintLeft_toLeftOf="parent"/>

<ImageView
    android:id="@+id/timeImage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:srcCompat="@drawable/clock"
    android:scaleType="fitCenter"
    android:adjustViewBounds="true"
    android:maxHeight="30dp"
    android:maxWidth="30dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginRight="5dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@id/timeTitle"/>

<TextView
    android:id="@+id/time"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/time"
    android:textSize="12sp"
    android:textColor="@color/textColor"
    android:layout_marginLeft="5dp"
    app:layout_constraintLeft_toRightOf="@id/timeImage"
    app:layout_constraintTop_toBottomOf="@id/timeTitle"/>

<View
    android:id="@+id/greyLine"
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:background="@android:color/black"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@id/timeImage"/>

<TextView
    android:id="@+id/review"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/review"
    android:textSize="12sp"
    android:textColor="@color/textColor"
    android:textStyle="bold"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@id/greyLine"/>

<ImageView
    android:id="@+id/foodImage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:srcCompat="@drawable/food_icon"
    android:scaleType="fitCenter"
    android:adjustViewBounds="true"
    android:maxHeight="30dp"
    android:maxWidth="30dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginRight="5dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@id/review"/>

<TextView
    android:id="@+id/food"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/food"
    android:textSize="12sp"
    android:textColor="@color/textColor"
    android:textStyle="bold"
    android:layout_marginLeft="5dp"
    android:layout_marginBottom="5dp"
    app:layout_constraintTop_toBottomOf="@id/review"
    app:layout_constraintLeft_toRightOf="@id/foodImage"/>

<ImageView
    android:id="@+id/foodRating"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:srcCompat="@drawable/love3_icon"
    android:scaleType="fitCenter"
    android:adjustViewBounds="true"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:layout_constraintLeft_toRightOf="@id/foodImage"
    app:layout_constraintTop_toBottomOf="@id/food"/>

<ImageView
    android:id="@+id/drinksImage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:srcCompat="@drawable/drinks_icon"
    android:scaleType="fitCenter"
    android:adjustViewBounds="true"
    android:maxHeight="30dp"
    android:maxWidth="30dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="5dp"
    app:layout_constraintLeft_toRightOf="@id/guidelineV"
    app:layout_constraintTop_toBottomOf="@id/review"/>

<TextView
    android:id="@+id/drink"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/drinks"
    android:textSize="12sp"
    android:textColor="@color/textColor"
    android:textStyle="bold"
    android:layout_marginLeft="5dp"
    android:layout_marginBottom="5dp"
    app:layout_constraintTop_toBottomOf="@id/review"
    app:layout_constraintLeft_toRightOf="@id/drinksImage"/>

<ImageView
    android:id="@+id/drinkRating"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:srcCompat="@drawable/love4_icon"
    android:scaleType="fitCenter"
    android:adjustViewBounds="true"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:layout_constraintLeft_toRightOf="@id/drinksImage"
    app:layout_constraintTop_toBottomOf="@id/drink"/>

<ImageView
    android:id="@+id/serviceImage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:srcCompat="@drawable/service_icon"
    android:scaleType="fitCenter"
    android:adjustViewBounds="true"
    android:maxHeight="30dp"
    android:maxWidth="30dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="5dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@id/foodRating"/>

<TextView
    android:id="@+id/service"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/service"
    android:textSize="12sp"
    android:textColor="@color/textColor"
    android:textStyle="bold"
    android:layout_marginLeft="5dp"
    android:layout_marginBottom="5dp"
    app:layout_constraintLeft_toRightOf="@id/serviceImage"
    app:layout_constraintTop_toBottomOf="@id/foodRating"/>

<ImageView
    android:id="@+id/serviceRating"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:srcCompat="@drawable/love5_icon"
    android:scaleType="fitCenter"
    android:adjustViewBounds="true"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    app:layout_constraintLeft_toRightOf="@id/serviceImage"
    app:layout_constraintTop_toBottomOf="@id/service"/>

<ImageView
    android:id="@+id/ambienceImage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:srcCompat="@drawable/ambience_icon"
    android:scaleType="fitCenter"
    android:adjustViewBounds="true"
    android:maxHeight="30dp"
    android:maxWidth="30dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="5dp"
    app:layout_constraintLeft_toRightOf="@id/guidelineV"
    app:layout_constraintTop_toBottomOf="@id/drinkRating"/>

<TextView
    android:id="@+id/ambience"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/ambience"
    android:textSize="12sp"
    android:textColor="@color/textColor"
    android:textStyle="bold"
    android:layout_marginLeft="5dp"
    android:layout_marginBottom="5dp"
    app:layout_constraintTop_toBottomOf="@id/drinkRating"
    app:layout_constraintLeft_toRightOf="@id/ambienceImage"/>

<ImageView
    android:id="@+id/ambienceRating"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:srcCompat="@drawable/love4_icon"
    android:scaleType="fitCenter"
    android:adjustViewBounds="true"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    app:layout_constraintLeft_toRightOf="@id/ambienceImage"
    app:layout_constraintTop_toBottomOf="@id/ambience"/>

</androidx.constraintlayout.widget.ConstraintLayout>